--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,31 @@
-spring.datasource.url=jdbc:postgresql://localhost/sweater
+spring.datasource.url=jdbc:postgresql://localhost:5432/sweater
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=admin
 spring.jpa.generate-ddl=false
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
 
-upload.path=/home/dru/uploads
+upload.path=C:/IdeaProjects/sweater/uploads
+
+up.path=/IdeaProjects/sweater/uploads
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.mail.host=smtp.yandex.ru
-spring.mail.username=uw@dru.su
-spring.mail.password=12345678
-spring.mail.port=465
-spring.mail.protocol=smtps
-mail.debug=false
+spring.mail.host=smtp.gmail.com
+spring.mail.username=serversendermail@gmail.com
+spring.mail.password=morovo3095953
+spring.mail.port=587
+spring.mail.protocol=smtp
+mail.debug=true
 
-recaptcha.secret=6LduQVoUAAAAACpkNtp9c5WWgyGENzIxZqF9SbZL
+
+spring.properties.mail.smtp.aut=true
+spring.properties.mail.smtp.starttls.enable=true
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+
+recaptcha.secret=6Le3GbIUAAAAAB1_NbHo1a4M10D76E1XpPeh4N3U
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
-
-hostname=192.168.0.107
