--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/sweater
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.jpa.generate-ddl=false
+#spring.datasource.url=jdbc:postgresql://localhost:5432/sweater
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.jpa.generate-ddl=false
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database= POSTGRESQL
 
 spring.freemarker.expose-request-attributes=true
 
